# Gallium

./: .gitignore  Makefile  Makefile.in  README.md  config.emscripten.mk  configure.ac
examples/: brainfuck.ga  class.ga  closure.ga  fib.ga  helloworld.ga  iterators.ga  macros.ga  mixins.ga  operator_overloading.ga  primes.ga
gallium/: Makefile  ast.c  compiler.c  config.emscripten.mk  config.mk  gallium.c  lexer.c  object.c  parser.c  vm.c
gallium/builtins/: bool.c  builtin.c  class.c  code.c  dict.c  enum.c  enumerable.c  exception.c  file.c  function.c  integer.c  list.c  method.c  mixin.c  module.c  mutable_string.c  null.c  range.c  string.c  tuple.c  weakref.c
gallium/compiler/: ast.c  ast.h  compiler.c  lexer.c  lexer.h  parser.c  parser.h
gallium/ds/: dict.c  list.c  stringbuf.c  vec.c
gallium/emit/: compiler.c  compiler.h
gallium/gallium/: ast.h  builtins.h  compiler.h  dict.h  lexer.h  list.h  object.h  opcode.h  parser.h  pool.h  stringbuf.h  vec.h  vm.h
gallium/modules/: ast.c  builtins.c  os.c  parser.c
gallium/runtime/: bytecode.h  object.c  vm.c
include/: gallium.h
include/gallium/: ast.h  builtins.h  object.h  opcode.h  stringbuf.h  vm.h
src/: arraylist_impl.c  ast.c  ast.h  compiler.c  compiler.h  gallium.c  hashmap_impl.c  lexer.c  lexer.h  lib.c  linkedlist_impl.c  object.c  parser.c  parser.h  stringbuilder.c  vm.c
src/builtins/: bool.c  builtin.c  class.c  code.c  dict.c  enum.c  enumerable.c  exception.c  file.c  float.c  function.c  integer.c  list.c  method.c  mixin.c  module.c  mutable_string.c  null.c  range.c  string.c  (+2 more)
(+37 files in other folders)
